--- a/app/views/bulk-order-home-kits/v1/index-manager.html
+++ b/app/views/bulk-order-home-kits/v1/index-manager.html
@@ -92,9 +92,7 @@
                     <h2 class="govuk-heading-m">What to do next</h2>
                     <p class="govuk-body">You will receive a text with your temporary password. You must use this within 7 days before it expires. Sign in with your email address as your username.</p>
 
-                    <a href="/bulk-order-home-kits/{{version}}/login-temporary" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
-                      Start now
-                    </a>
+                    <p class="govuk-body">Start Now at <a href="/bulk-order-home-kits/{{version}}/login-temporary">https://www.gov.uk/order-coronavirus-bulk-home-tests.gov.uk</a></p>
 
                     <div class="proto-action big">
                       <a href="/bulk-order-home-kits/{{version}}/sms-manager">
