--- a/app/views/bulk-order-home-kits/v1/index.html
+++ b/app/views/bulk-order-home-kits/v1/index.html
@@ -1,17 +1,30 @@
 {% set version = "v1" %}
-{% set pageTitle = "Create a bulk order of home test kits" %}
+{% set pageTitle = "Manage bulk PCR home test kit ordering" %}
 {% extends "includes/layout.html" %}
+
+{% block beforeContent %}
+  <div class="govuk-phase-banner">
+    <p class="govuk-phase-banner__content">
+      <strong class="govuk-tag govuk-phase-banner__content__tag">
+        alpha
+      </strong>
+      <span class="govuk-phase-banner__text">
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
+    </p>
+  </div>
+
+  <a class="govuk-back-link" href="#">Sign out</a>
+{% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">Use this service to manage bulk testing and arrange for home test kits to be sent to individuals.</p>
-
-      <p class="govuk-body govuk-!-margin-bottom-1">You can use our spreadsheet to order tests for up to 100 people at a time.</p>
+      <p class="govuk-body govuk-!-margin-bottom-6">Use this service to manage bulk testing and arrange for home test kits to be sent to individuals. You can use the spreadsheet to order tests for up to 100 people at a time.</p>
 
       <h2 class="govuk-heading-m">Check what you need</h2>
       <p class="govuk-body govuk-!-margin-bottom-1">You'll need the following details before you start:</p>
@@ -23,7 +36,7 @@
 
       <h2 class="govuk-heading-m">How we use personal data</h2>
       <p class="govuk-body">
-        To find out how we use these details, <a href="#" class="govuk-link">read the coronavirus (COVID-19) privacy note</a>.
+        To find out how we use data, <a href="#" class="govuk-link">read the coronavirus (COVID-19) privacy note</a>.
       </p>
 
       <form action="/bulk-order-home-kits/{{version}}/login" method="post">
@@ -59,7 +72,10 @@
         </div>
 
         <button type="submit" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
-          Start now
+          <strong>Start now</strong>
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+          </svg>
         </button>
 
       </form>
