--- a/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
@@ -22,41 +22,39 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-          <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">{{ pageTitle }}</h1>
+      <p class="govuk-hint govuk-!-margin-bottom-4">Ministry of Defence</p>
 
-          <p class="govuk-hint govuk-!-margin-bottom-4">Pete Smith</p>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-7">{{ pageTitle }}</h1>
 
-          <div style="padding: 0">
-            <form action="/bulk-order-home-kits/{{version}}/order-kits/" method="post">
-              <button class="govuk-!-margin-bottom-4 account-home-button">
-                <div>
-                  <p class="govuk-!-margin-bottom-2">
-                    <strong style="color: #005eb8">Order home test kits</strong>
-                  </p>
-                  <p class="govuk-!-margin-bottom-0">
-                    You can arrange for bulk home test kits to be sent to individuals.
-                  </p>
-                </div>
-              </button>
-            </form>
-          </div>
+      <div style="padding: 0">
+        <form action="/bulk-order-home-kits/{{version}}/order-kits/" method="post">
+          <button class="govuk-!-margin-bottom-4 account-home-button">
+            <div>
+              <p class="govuk-!-margin-bottom-2">
+                <strong style="color: #005eb8">Order home test kits</strong>
+              </p>
+              <p class="govuk-!-margin-bottom-0">
+                You can arrange for bulk home test kits to be sent to individuals.
+              </p>
+            </div>
+          </button>
+        </form>
+      </div>
 
-          <div style="padding: 0">
-            <form action="/bulk-order-home-kits/{{version}}/manage-organisation/manage-team-leaders" method="post">
-              <button class="govuk-!-margin-bottom-4 account-home-button">
-                <div>
-                  <p class="govuk-!-margin-bottom-2">
-                    <strong style="color: #005eb8">Manage Home Test Team</strong>
-                  </p>
-                  <p class="govuk-!-margin-bottom-0">
-                    You can add or remove operatives so they can order test kits too, as well as view recent orders.
-                  </p>
-                </div>
-              </button>
-            </form>
-          </div>
-
-      </form>
+      <div style="padding: 0">
+        <form action="/bulk-order-home-kits/{{version}}/manage-organisation/manage-team-leaders" method="post">
+          <button class="govuk-!-margin-bottom-4 account-home-button">
+            <div>
+              <p class="govuk-!-margin-bottom-2">
+                <strong style="color: #005eb8">Manage PCR Home Test Team</strong>
+              </p>
+              <p class="govuk-!-margin-bottom-0">
+                You can add or remove operatives so they can order bulk home test kits too, as well as view recent orders.
+              </p>
+            </div>
+          </button>
+        </form>
+      </div>
 
     </div>
   </div>
