--- a/app/views/bulk-order-home-kits/v1/manage-organisation/manage-team-leaders.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/manage-team-leaders.html
@@ -172,7 +172,7 @@
       </dl>
       {% endif %}
 
-      {% if data['team-leader-1-first-name'] == undefined or data['team-leader-1-first-name'] == "" and data['repeat-user'] !== "Yes" %}
+      {% if data['team-leader-1-first-name'] == undefined or data['team-leader-1-first-name'] == "" %}
       <p class="govuk-margin-!-top-4">Add team leaders, so they can manage test site access for staff.</p>
       {% endif %}
 
