--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
@@ -25,9 +25,9 @@
       <h1 class="govuk-panel__title">{{ pageTitle }}</h1>
       <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
         <strong>
-          Name: {{ data['team-leader-2-first-name'] }} {{ data['team-leader-2-last-name'] }}<br><br>
-          Status: {% if data['team-leader-2-status'] == "Active" %}Active{% else %}Inactive{% endif %}<br><br>
-          Contact: {{ data['team-leader-2-mobile-number'] }} / {{ data['team-leader-2-email-address'] }}
+          {{ data['team-leader-2-first-name'] }} {{ data['team-leader-2-last-name'] }}<br><br>
+          {% if data['team-leader-2-status'] == "Active" %}Active{% else %}Inactive{% endif %}<br><br>
+          {{ data['team-leader-2-mobile-number'] }} / {{ data['team-leader-2-email-address'] }}
         </strong>
       </p>
     </div>
