--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-added-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-added-confirmation.html
@@ -26,23 +26,23 @@
       <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
         {% if data['team-leader-1-first-name'] != undefined and data['team-leader-2-first-name'] == undefined %}
         <strong>
-          Name: {{ data['team-leader-1-first-name'] }} {{ data['team-leader-1-last-name'] }}<br><br>
-          Contact: {{ data['team-leader-1-mobile-number'] }} / {{ data['team-leader-1-email-address'] }}
+          {{ data['team-leader-1-first-name'] }} {{ data['team-leader-1-last-name'] }}<br><br>
+          {{ data['team-leader-1-mobile-number'] }} / {{ data['team-leader-1-email-address'] }}
         </strong>
         {% elseif data['team-leader-1-first-name'] != undefined and data['team-leader-2-first-name'] != undefined and data['team-leader-3-first-name'] == undefined %}
         <strong>
-          Name: {{ data['team-leader-2-first-name'] }} {{ data['team-leader-2-last-name'] }}<br><br>
-          Contact: {{ data['team-leader-2-mobile-number'] }} / {{ data['team-leader-2-email-address'] }}
+          {{ data['team-leader-2-first-name'] }} {{ data['team-leader-2-last-name'] }}<br><br>
+          {{ data['team-leader-2-mobile-number'] }} / {{ data['team-leader-2-email-address'] }}
         </strong>
         {% elseif data['team-leader-1-first-name'] != undefined and data['team-leader-2-first-name'] != undefined and data['team-leader-3-first-name'] !== undefined and data['team-leader-4-first-name'] == undefined %}
         <strong>
-          Name: {{ data['team-leader-3-first-name'] }} {{ data['team-leader-3-last-name'] }}<br><br>
-          Contact: {{ data['team-leader-3-mobile-number'] }} / {{ data['team-leader-3-email-address'] }}
+          {{ data['team-leader-3-first-name'] }} {{ data['team-leader-3-last-name'] }}<br><br>
+          {{ data['team-leader-3-mobile-number'] }} / {{ data['team-leader-3-email-address'] }}
         </strong>
         {% else %}
         <strong>
-          Name: {{ data['team-leader-4-first-name'] }} {{ data['team-leader-4-last-name'] }}<br><br>
-          Contact: {{ data['team-leader-4-mobile-number'] }} / {{ data['team-leader-4-email-address'] }}
+          {{ data['team-leader-4-first-name'] }} {{ data['team-leader-4-last-name'] }}<br><br>
+          {{ data['team-leader-4-mobile-number'] }} / {{ data['team-leader-4-email-address'] }}
         </strong>
         {% endif %}
       </p>
