--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-1-updated-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-1-updated-confirmation.html
@@ -25,15 +25,15 @@
       <h1 class="govuk-panel__title">{{ pageTitle }}</h1>
       <p class="govuk-body govuk-!-margin-bottom-1" style="color: #ffffff">
         <strong>
-          Name: {{ data['team-leader-1-first-name'] }} {{ data['team-leader-1-last-name'] }}<br><br>
-          Status: {% if data['team-leader-1-status'] == "Active" %}Active{% else %}Inactive{% endif %}<br><br>
-          Contact: {{ data['team-leader-1-mobile-number'] }} / {{ data['team-leader-1-email-address'] }}
+          {{ data['team-leader-1-first-name'] }} {{ data['team-leader-1-last-name'] }}<br><br>
+          {% if data['team-leader-1-status'] == "Active" %}Active{% else %}Inactive{% endif %}<br><br>
+          {{ data['team-leader-1-mobile-number'] }} / {{ data['team-leader-1-email-address'] }}
         </strong>
       </p>
     </div>
 
     <p class="govuk-body govuk-!-margin-bottom-7">
-      This operative can now order bulk PCR home test kits.
+      You've updated home test operative details.
     </p>
 
     <div class="inline-button-wrapper" style="justify-content: flex-start;">
