--- a/app/views/bulk-order-home-kits/v1/order-kits/confirmation-bulk-upload.html
+++ b/app/views/bulk-order-home-kits/v1/order-kits/confirmation-bulk-upload.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "PCR home test kit order submitted" %}
+{% set pageTitle = "Home test kit order submitted" %}
 
 {% extends "includes/layout.html" %}
 
