--- a/app/views/bulk-order-home-kits/v1/order-kits/index.html
+++ b/app/views/bulk-order-home-kits/v1/order-kits/index.html
@@ -104,6 +104,7 @@
                 </td>
               </td>
             </tr>
+            {% if data['order-2-reference'] %}
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">
                 {{ data['order-2-reference'] }}
@@ -127,6 +128,7 @@
                 </td>
               </td>
             </tr>
+            {% endif %}
             {% if data['order-3-reference'] %}
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">
