--- a/app/views/antigen/v2/global-registration/fingerprick-test.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test.html
@@ -29,47 +29,17 @@
               </h1>
             </legend>
             <span id="fingerprick-test-hint" class="govuk-body">
-              <strong>The antibody test will help the NHS learn more about who's had the virus more than once, and how it has spread.</strong><br><br>
-              <strong class="govuk-!-font-size-24">What they need to know</strong><br><br>
+              The antibody test will help the NHS learn more about who's had the virus more than once, and how it has spread.<br><br>
+              If they agree to do antiboody testing, they will:<br><br>
               <ul class="govuk-list govuk-list--bullet">
-                <li>They will only be sent an antibody test if they test positive for coronavirus.</li>
-                <li>They will receive 2 antibody tests in the post 3 weeks apart to their home address.</li>
-                <li>The antibody test is a ‘fingerprick’ blood test.</li>
-                <li>They do the test on themselves at home.</li>
-                <li>The completed antibody tests have to be posted back. They can leave home to post a test kit while self-isolating.</li>
+                <li>only be sent an antibody test if they test positive for coronavirus</li>
+                <li>receive 2 antibody tests in the post 3 weeks apart to their home address</li>
+                <li>do a fingerprick blood test on themselves at home</li>
+                <li>need to post back the completed antibody test</li>
               </ul>
             </span>
 
-            <details class="govuk-details govuk-!-margin-bottom-2 govuk-!-margin-top-8" data-module="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  Video: How to collect your blood sample
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                <div class="govuk-!-margin-bottom-5 govuk-!-margin-top-4 videoWrapper">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/BUgBOSgnMv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-              </div>
-            </details>
-
-            <details class="govuk-details govuk-!-margin-bottom-7" data-module="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  Video transcript: What is a fingerprick test
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                <p class="govuk-body">
-                  There are a few things you need to do to prepare before doing your test, like drinking lots of water, soaking your hand in warm water and exercising if safe to do so.<br><br>
-                  Next, you'll use a lancet to prick the corner of your fingertip. It's only a small prick and you won't see any of the needle.<br><br>
-                  You'll then massage your hand, and fill your tube until the 600 line. Then you'll put the cap on and slowly turn the tube upside down.<br><br>
-                  Finally, you'll label your tube, package everything up and pop it in a postbox.
-                </p>
-              </div>
-            </details>
-
-            <div class="govuk-radios">
+            <div class="govuk-radios govuk-!-margin-top-7">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="fingerprick-test-1" name="fingerprick-test" type="radio" value="Yes" {{ checked("fingerprick-test", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="fingerprick-test-1">
@@ -83,15 +53,35 @@
                 </label>
               </div>
             </div>
-          </fieldset>
-        </div>
 
-        <div class="govuk-warning-text">
-          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-          <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
-            By selecting Yes you confirm that you are OK doing a fingerprick blood test, and do not take anticoagulants ('blood-thinning' medicines) or  have a blood clotting disorder such as haemophilia. 
-          </strong>
+            <div class="govuk-warning-text govuk-!-margin-top-7">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                By selecting Yes you confirm that you are OK doing a fingerprick blood test, and do not take anticoagulants ('blood-thinning' medicines) or  have a blood clotting disorder such as haemophilia. 
+              </strong>
+            </div>
+
+            <details class="govuk-details govuk-!-margin-bottom-2 govuk-!-margin-top-6" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Video: How to collect your blood sample
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <div class="govuk-!-margin-bottom-5 govuk-!-margin-top-4 videoWrapper">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/BUgBOSgnMv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <p class="govuk-body">
+                  There are a few things you need to do to prepare before doing your test, like drinking lots of water, soaking your hand in warm water and exercising if safe to do so.<br><br>
+                  Next, you'll use a lancet to prick the corner of your fingertip. It's only a small prick and you won't see any of the needle.<br><br>
+                  You'll then massage your hand, and fill your tube until the 600 line. Then you'll put the cap on and slowly turn the tube upside down.<br><br>
+                  Finally, you'll label your tube, package everything up and pop it in a postbox.
+                </p>
+              </div>
+            </details>
+
+          </fieldset>
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
