--- a/app/views/antigen/v2/global-registration/gender.html
+++ b/app/views/antigen/v2/global-registration/gender.html
@@ -34,7 +34,7 @@
               </h1>
             </legend>
             <span id="gender-hint" class="govuk-body">
-              We are asking this question so we can find the person's GP record and save their result there.
+              We are asking this question so we can find their GP record and save their result there.
             </span>
             <div class="govuk-radios govuk-!-margin-top-6" data-module="govuk-radios">
               <div class="govuk-radios__item">
