--- a/app/views/antigen/v2/refer-and-triage/index-option2.html
+++ b/app/views/antigen/v2/refer-and-triage/index-option2.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What’s your name?" %}
+{% set pageTitle = "What’s the name of the person who needs a test?" %}
 
 {% extends "includes/layout.html" %}
 
