--- a/app/views/antigen/v2/global-registration/fingerprick-test.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test.html
@@ -33,9 +33,10 @@
               If they agree to do antiboody testing, they will:<br><br>
               <ul class="govuk-list govuk-list--bullet">
                 <li>only be sent an antibody test if they test positive for coronavirus</li>
-                <li>receive 2 antibody tests in the post 3 weeks apart to their home address</li>
+                <li>be posted 2 antibody tests 3 weeks apart to their home address</li>
                 <li>do a fingerprick blood test on themselves at home</li>
                 <li>need to post back the completed antibody test</li>
+                <li>get the test result sent to them</li>
               </ul>
             </span>
 
