--- a/app/views/antigen/v2/global-registration/nhs-number-known.html
+++ b/app/views/antigen/v2/global-registration/nhs-number-known.html
@@ -41,7 +41,7 @@
             <span id="nhs-number-known-hint" class="govuk-body">
               <strong>This number helps us quickly:</strong><br>
               <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
-                <li><strong>save your test result to your GP</strong></li>
+                <li><strong>save your test result to your GP record</strong></li>
                 <li><strong>make your results available</strong> if you need to prove you do not have COVID-19</li>
               </ul>
               It's OK if you do not have it, you can still continue. But not providing your NHS number could cause delays if you wish to attend certain events.<br><br>
