--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -178,7 +178,7 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Medical record
+            Medical record (male, female, other…)
           </dt>
           <dd class="govuk-summary-list__value">
             {{ data['gender'] or 'Male' }}
