--- a/app/views/lfd-collection-registration/v1/confirmation.html
+++ b/app/views/lfd-collection-registration/v1/confirmation.html
@@ -40,7 +40,8 @@
 
     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center; line-height: 1em;">
       Collect code reference:<br><br>
-      <strong><span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span></strong>
+      <strong>NYX7 - CT5Z - 8VF7 - 7FW4</strong>
+      <!-- <strong><span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span></strong> -->
     </p>
 
     <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
