--- a/app/views/lfd-collection-registration/v1/email-address.html
+++ b/app/views/lfd-collection-registration/v1/email-address.html
@@ -60,11 +60,17 @@
               If you do not have an email address, you can provide one that belongs to someone you trust.
             </span>
       
-            <div class="govuk-form-group govuk-!-margin-top-6 govuk-!-margin-bottom-4">
+            <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="email-address">
                 Email address
                 </label>
                 <input class="govuk-input govuk-!-width-two-thirds" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
+            </div>
+            <div class="govuk-form-group govuk-!-margin-bottom-4">
+              <label class="govuk-label" for="confirm-email-address">
+                Confirm email address
+              </label>
+              <input class="govuk-input govuk-!-width-two-thirds" id="confirm-email-address" name="confirm-email-address" type="text" value="{{ data['confirm-email-address'] }}">
             </div>
             <p class="govuk-body"><a class="govuk-link" href="/lfd-collection-registration/{{version}}/mobile-number">I do not have access to an email address</a></p>
             {% endif %}
