--- a/app/views/lfd-collection-registration/v1/mobile-number.html
+++ b/app/views/lfd-collection-registration/v1/mobile-number.html
@@ -52,7 +52,13 @@
                   <label class="govuk-label" for="mobile-phone-number">
                     Mobile number
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="mobile-phone-number" name="mobile-phone-number" type="tel" value="{{ data['mobile-phone-number'] }}">
+                  <input class="govuk-input govuk-!-width-one-half" id="mobile-phone-number" name="mobile-phone-number" type="tel" value="{{ data['mobile-phone-number'] }}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="mobile-phone-number">
+                    Confirm mobile number
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-half" id="confirm-mobile-phone-number" name="confirm-mobile-phone-number" type="tel" value="{{ data['confirm-mobile-phone-number'] }}">
                 </div>
               </div>
               <div class="govuk-radios__item">
