--- a/app/views/logresults-web-service/v2/site-operative/edit-answers/qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/edit-answers/qr-code-person.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Scan the QR code of the person collecting" %}
+{% set pageTitle = "Scan the person's collect code" %}
 
 {% extends "includes/layout.html" %}
 
@@ -24,15 +24,42 @@
     <div class="govuk-grid-column-two-thirds">
   
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">{{ pageTitle }}</h1>
-        <p class="govuk-body">Position the QR code so it fits inside the square on your device's camera.</p>
+        <p class="govuk-body">
+          You’ll find the person’s collect code in either an email or text that they received.<br><br>
+          Position the collect code so it fits inside the square on your device's camera.
+        </p>
+
+        <details class="govuk-details govuk-!-margin-top-4" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              What does a collect code look like?
+            </span>
+          </summary>
+          <div class="govuk-details__text govuk-!-width-two-thirds" style="display: flex; justify-content:flex-start; flex-direction: column; align-items: center;">
+            <img src="/public/images/qr-collect.png" alt="barcode number" width="40%" />
+            <p class="govuk-body govuk-!-margin-top-3">Collect code reference: 12653234356</p>
+          </div>
+        </details>
 
         <div>
           <img src="/public/images/code-scan.png" alt="camera view" class="scan-barcode" />
         </div>
         
-        <a href="/logresults-web-service/{{version}}/site-operative/edit-answers/enter-qr-code-person" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--secondary" data-module="govuk-button">
-          Enter QR code manually
-        </a>
+        <form class="govuk-!-width-two-thirds govuk-!-margin-top-2" action="/logresults-web-service/{{version}}/site-operative/edit-answers/enter-qr-code-person" style="display: flex; justify-content: center;" method="post">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
+          <button data-module="govuk-button" class="link-styled-button govuk-!-font-size-19">
+            Enter collect code manually
+          </button>
+        </form>
+
+        <form class="govuk-!-width-two-thirds govuk-!-margin-top-2" action="/logresults-web-service/{{version}}/site-operative/anonymous-registration" style="display: flex; justify-content: center;" method="post">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
+          <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
+          <button data-module="govuk-button" class="link-styled-button govuk-!-font-size-19">
+            This person doesn't have a collect code
+          </button>
+        </form>
   
     </div>
   </div>
@@ -40,9 +67,21 @@
 {% endblock %}
 
 {% block bodyEnd %}
-<div class="proto-action" style="width: 150px;">
-  <a href="/logresults-web-service/{{version}}/site-operative/check-your-answers-collection">
-    <div class="proto-action-text govuk-!-margin-left-3">Continue</div>
-  </a>
+<div class="proto-action big">
+  <form action="/logresults-web-service/{{version}}/site-operative/check-your-answers-collection" style="height: 100%;" method="post">
+    <!-- <input class="govuk-radios__input" name="reason-for-test" type="radio" value="" style="display: none;" checked>
+    <input class="govuk-radios__input" name="who-asked-for-test" type="radio" value="" style="display: none;" checked> -->
+    <button 
+      class="proto-link-button"
+      data-module="govuk-button"
+      style="cursor: pointer; outline: none; border: none; background-color: transparent; width: 100%; height: 100%; padding: 0; margin: 0"
+      >
+      <a style="height: 100%;">
+        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">
+          Continue
+        </div>
+      </a>
+    </button>
+  </form>
 </div>
 {% endblock %}
