--- a/app/views/litereg-accounts/v1/daily-contact-testing.html
+++ b/app/views/litereg-accounts/v1/daily-contact-testing.html
@@ -35,11 +35,12 @@
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-7">
                 {% if data['whos-taking-the-test'] == "someone-else" %}
                 Are they taking part in the 'daily contact testing' pilot?
-                {% endif %}
-                {% if data['email-address'] == "user@testing.co.uk" %}
-                Were you asked to take part in daily contact testing?
                 {% else %}
-                {{ pageTitle }}
+                  {% if data['email-address'] == "user@testing.co.uk" %}
+                  Were you asked to take part in daily contact testing?
+                  {% else %}
+                  {{ pageTitle }}
+                  {% endif %}
                 {% endif %}
               </h1>
             </legend>
