--- a/app/views/lfd-collection-registration/v1/address.html
+++ b/app/views/lfd-collection-registration/v1/address.html
@@ -19,7 +19,7 @@
   {% include "includes/account-menu.html" %}
 {% endif %}
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/collecting-for">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/country">Back</a>
 {% endblock %}
 
 {% block content %}
