--- a/app/views/lfd-collection-registration/v1/nhs-account.html
+++ b/app/views/lfd-collection-registration/v1/nhs-account.html
@@ -33,8 +33,7 @@
           <strong>Sign in or create an account</strong>
         </label>
         <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          We’ll save your details each time you register to collect. Creating an account only takes 2 minutes and you’ll save time when registering to collect.
-        </div>
+We’ll save your details each time you get a collect code. Creating an account only takes 2 minutes and you’ll save time when getting a collect code.        </div>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="coronavirus-account-2" name="coronavirus-account" type="radio" value="No" {{ checked("coronavirus-account", "No") }}>
@@ -56,4 +55,3 @@
   </div>
 
 {% endblock %}
-
