--- a/app/views/lfd-collection-registration/v1/country.html
+++ b/app/views/lfd-collection-registration/v1/country.html
@@ -15,8 +15,8 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/do-you-have-symptoms">Back</a>
-  
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/collecting-for">Back</a>
+
 {% endblock %}
 
 {% block content %}
@@ -25,7 +25,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <form action="/lfd-collection-registration/{{version}}/action10/country" method="post">
-      
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
