--- a/app/views/lfd-collection-registration/v1/collecting-for.html
+++ b/app/views/lfd-collection-registration/v1/collecting-for.html
@@ -34,7 +34,7 @@
                         </h1>
                     </legend>
                     <span id="collecting-for-hint" class="govuk-body">
-                      You can collect test packs for your household and another household. You must register a collect code for each household.
+                      You can collect test packs for your household and another household. You must get a collect code for each household.
                     </span>
                     <div class="govuk-radios govuk-!-margin-top-5" data-module="govuk-radios">
 
