--- a/app/views/litereg-accounts/v3/index.html
+++ b/app/views/litereg-accounts/v3/index.html
@@ -1,5 +1,5 @@
 {% set version = "v3" %}
-{% set pageTitle = "Register a coronavirus test" %}
+{% set pageTitle = "Register a coronavirus (COVID-19) test kit" %}
 
 {% extends "includes/layout.html" %}
 
@@ -22,22 +22,34 @@
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">{{ pageTitle }}</h1>
 
-      <p class="govuk-body govuk-!-font-size-24">Use this service to register a coronavirus test for you or someone else.</p>
-
-      <p class="govuk-body govuk-!-font-size-24">You need to register each coronavirus test to get the results.</p>
-
-      <h2 class="govuk-heading-m">To complete this form, you’ll need:</h2>
-      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-        <li>the test kit barcode for the test you’re registering</li>
-        <li>a mobile number (for you or the person you're registering it for)</li>
-        <li>the Royal Mail barcode on the return box (only if you're registering a home test kit)</li>
-        <li>your (or the person's) NHS number - this is optional, but will make your test result quickly available if you need to prove you do not have COVID-19. <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>.</li>
+      <p class="govuk-body">Use this service to register a coronavirus (COVID-19) test kit so you can get the test result if:</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
+        <li>you were given a Test Registration Card at a test site</li>
+        <li>you're doing a rapid lateral flow test at a test site</li>
+        <li>you're taking part in surge testing and you're doing a PCR test</li>
+        <li>you've arrived in the UK after international travel and you're doing a PCR test</li>
       </ul>
 
-      <p class="govuk-body"><strong>If you’re taking a test before your hospital visit</strong>, you need to <a href="#">register your kit here</a>.</p>
+      <p class="govuk-body">If you are registering a test for more than one person, you need to register each test to get all the results.</p>
+
+      <h2 class="govuk-heading-m">Before you start</h2>
+      <p class="govuk-body">You'll need:</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
+        <li>the test kit barcode for the test you're registering</li>
+        <li>a mobile phone number (for you or the person you're registering it for)</li>
+        <li>your (or the person's) NHS number - this is optional, but will make your test result quickly available if you need to prove you do not have COVID-19. <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>.</li>
+        <li>Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
+      </ul>
+
+      <h2 class="govuk-heading-m">Get help to register your test kit</h2>
+      <p class="govuk-body">
+        If you cannot use the online service, call 119 (free from mobiles and landlines). Lines are open every day, 7am to 11pm. You can get support in 200 languages.<br><br>
+        <a class="govuk-link" href="https://interpreternow.co.uk/nhs119">InterpreterNow</a> is a free online British Sign Language interpreter service for 119.<br><br>
+        If you're blind or partially sighted, you can use the free <a lass="govuk-link" href="https://www.bemyeyes.com/">Be My Eyes app</a> to get help with registering. Download the app and go to the 'Specialist Help' section.
+      </p>
 
       <a href="/litereg-accounts/{{version}}/whos-taking-the-test" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-        Start now
+        Register your test
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
