--- a/app/views/litereg-accounts/v3/index.html
+++ b/app/views/litereg-accounts/v3/index.html
@@ -34,12 +34,18 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
       <p class="govuk-body">You'll need:</p>
-      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-6">
+      <ul class="govuk-list govuk-list--bullet">
         <li>the test kit barcode for the test you're registering</li>
         <li>a mobile phone number (for you or the person you're registering it for)</li>
-        <li>your (or the person's) NHS number - this is optional, but will make your test result quickly available if you need to prove you do not have COVID-19. <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>.</li>
         <li>Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
+        <li>NHS number (called a CHI number in Scotland and H&C number in Northern Ireland)</li>
       </ul>
+
+      <p class="govuk-body govuk-!-margin-bottom-6">
+        The NHS number is optional but helps us quickly save your test result to your GP record.<br><br>
+        In England, entering your NHS number also means your test results can be quickly saved to an ‘NHS COVID Pass’. You may be asked to show your pass to get into some events, or to travel abroad.<br><br>
+        <a href="https://www.nhs.uk/nhs-services/online-services/find-nhs-number/">Look up your NHS number</a>
+      </p>
 
       <h2 class="govuk-heading-m">Get help to register your test kit</h2>
       <p class="govuk-body">
