--- a/app/views/litereg-accounts/v3/index.html
+++ b/app/views/litereg-accounts/v3/index.html
@@ -37,8 +37,8 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>the test kit barcode for the test you're registering</li>
         <li>a mobile phone number (for you or the person you're registering it for)</li>
-        <li>Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
-        <li>NHS number (called a CHI number in Scotland and H&C number in Northern Ireland)</li>
+        <li>the Royal Mail barcode - only if you are registering a PCR test that you will return by post</li>
+        <li>the NHS number for each person taking the test (called a CHI number in Scotland and H&C number in Northern Ireland)</li>
       </ul>
 
       <p class="govuk-body govuk-!-margin-bottom-6">
