--- a/app/views/bulk-order-home-kits/v1/manage-organisation/add-team-leader.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/add-team-leader.html
@@ -34,7 +34,7 @@
           </label>
         </h1>
 
-        <p class="govuk-body govuk-!-margin-bottom-6">Enter details of a home test leader so they can order test kits.</p>
+        <p class="govuk-body govuk-!-margin-bottom-6">Enter details of a home test operative so they can order test kits.</p>
 
         {% if data['team-leader-1-first-name'] == undefined and data['team-leader-2-first-name'] == undefined and data['team-leader-3-first-name'] == undefined %}
 
