--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-2-updated-confirmation.html
@@ -33,7 +33,7 @@
     </div>
 
     <p class="govuk-body govuk-!-margin-bottom-7">
-      This person will receive a new temporary password by text so they can sign in to become a PCR Home Test Operative.
+      This person will receive a new temporary password by text so they can sign in to become a home test operative.
     </p>
 
     <div class="inline-button-wrapper" style="justify-content: flex-start;">
