--- a/app/views/bulk-order-home-kits/v1/order-kits/index.html
+++ b/app/views/bulk-order-home-kits/v1/order-kits/index.html
@@ -98,7 +98,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-123456788">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-1">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -122,7 +122,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567990">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-4">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -147,7 +147,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567899">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-3">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -172,7 +172,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567799">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-4">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -200,7 +200,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-123456788">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-1">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -225,7 +225,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567990">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-4">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -250,7 +250,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567899">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-3">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
@@ -275,7 +275,7 @@
               </td>
               <td class="govuk-table__cell">
                 <td class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-number-1234567799">
+                  <a class="govuk-link" href="/bulk-order-home-kits/{{version}}/order-kits/order-4">
                     View order<span class="govuk-visually-hidden">view order</span>
                   </a>
                 </td>
