--- a/app/views/litereg-accounts/v3/name.html
+++ b/app/views/litereg-accounts/v3/name.html
@@ -40,9 +40,13 @@
         <fieldset class="govuk-fieldset">
 
           {% if data['whos-taking-the-test'] == "someone-else" %}
-          <p class="govuk-body">Try to enter the exact name registered with the person's GP.</p>
+          <p class="govuk-body">
+            Enter the name registered with their GP. For example, if they call themself 'Mike' but they registered 'Michael' with their GP, enter 'Michael'.
+          </p>
           {% else %}
-          <p class="govuk-body">Try to enter the exact name registered with your GP.</p>
+          <p class="govuk-body">
+            Enter the name registered with your GP. For example, if you call yourself 'Mike' but you registered 'Michael' with your GP, enter 'Michael'.
+          </p>
           {% endif %}
           
           <div class="govuk-form-group govuk-!-margin-top-6">
@@ -66,12 +70,6 @@
       </form>
 
     </div>
-  </div>
-
-  <div class="proto-action big">
-    <a href="/litereg-accounts/{{version}}/name-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
-    </a>
   </div>
 
 {% endblock %}
