--- a/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/index.html
@@ -34,7 +34,7 @@
                 <strong style="color: #005eb8">Order home test kits</strong>
               </p>
               <p class="govuk-!-margin-bottom-0">
-                You can arrange for bulk home test kits to be sent to individuals.
+                You can arrange for bulk home test kits to be sent to individuals and review your orders.
               </p>
             </div>
           </button>
@@ -46,7 +46,7 @@
           <button class="govuk-!-margin-bottom-4 account-home-button">
             <div>
               <p class="govuk-!-margin-bottom-2">
-                <strong style="color: #005eb8">Manage PCR Home Test Team</strong>
+                <strong style="color: #005eb8">Manage Home Test Team</strong>
               </p>
               <p class="govuk-!-margin-bottom-0">
                 You can add or remove operatives so they can order bulk home test kits too, as well as view recent orders.
