--- a/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-3-updated-confirmation.html
+++ b/app/views/bulk-order-home-kits/v1/manage-organisation/team-leader-3-updated-confirmation.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "You've updated PCR Home Test Operative details" %}
+{% set pageTitle = "You've updated home test operative details" %}
 
 {% extends "includes/layout.html" %}
 
