--- a/app/views/litereg-accounts/v3/check-your-answers.html
+++ b/app/views/litereg-accounts/v3/check-your-answers.html
@@ -466,18 +466,34 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            NHS number
+            NHS number known
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['nhs-number-known'] }}
+            {{ data['nhs-number-known'] or 'No' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/litereg-accounts/{{version}}/nhs-number-known">
+              Change
+              <span class="govuk-visually-hidden">NHS number known</span>
+            </a>
+          </dd>
+        </div>
+        {% if data['nhs-number-known'] == "Yes" %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            NHS number
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['nhs-number'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a href="/litereg-accounts/{{version}}/nhs-number">
               Change
               <span class="govuk-visually-hidden">NHS number</span>
             </a>
           </dd>
         </div>
+        {% endif %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Positive coronavirus test
