--- a/app/views/antigen/v2/refer-and-triage/do-you-have-a-car.html
+++ b/app/views/antigen/v2/refer-and-triage/do-you-have-a-car.html
@@ -35,8 +35,7 @@
                     </legend>
                     <span id="do-you-have-a-car-hint" class="govuk-body">
                         We are asking this so we can include a drive-through test as one of your options.<br><br>
-                        You can still choose a walk-through test or a home test if you prefer.<br><br>
-                        It’s safe to visit a drive-through test site if you’re self-isolating.
+                        You're allowed to visit a drive-through test site if you're self-isolating.
                     </span>
                     <div class="govuk-radios govuk-!-margin-top-5">
                         <div class="govuk-radios__item">
