--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -883,3 +883,95 @@ a.card__body {
   //     @include govuk-link-style-success;
   //   }
   // }
+
+
+
+@media screen and (max-width:601px) {
+	table.mobile-optimised {
+		word-wrap:break-word;
+	}
+	table.mobile-optimised thead {
+		display:none
+	}
+	table.mobile-optimised td {
+		display:block;
+		float:left;/* ie9 and under hack */
+		width:100%;
+		clear:both;
+		padding:10px 5px;
+		-moz-box-sizing:border-box;
+		-webkit-box-sizing:border-box;
+		box-sizing:border-box;
+	}
+	table.mobile-optimised tbody, table.mobile-optimised tr {
+		display:block
+	}
+	.mobile-optimised td:before {
+		content:attr(data-th);
+		display:block;
+		font-weight:bold;
+		margin:0 0 2px;
+		color:#000;
+	}
+	.mobile-optimised tbody tr {
+		float:left;width:100%;
+    margin-bottom:40px;
+    border: 1px solid #b1b4b6;
+	}
+  .mobile-optimised tbody tr {
+		float:left;width:100%;
+    margin-bottom:40px;
+    border: 1px solid #b1b4b6;
+	}
+  .mobile-optimised tbody td:last-child {
+    border-bottom: 0;
+    text-align: center;
+  }
+}
+
+  //Share results
+@media (min-width: 48.0625em) {
+  .column-width-title {
+    width:300px;
+  }
+}
+
+@media screen and (min-width:641px) {
+  .inline-form {
+    position: absolute;
+    bottom: 0px;
+    left: 37%;
+  }
+}
+
+@media screen and (min-width:694px) {
+  .inline-form {
+    position: absolute;
+    bottom: 0px;
+    left: 31%;
+  }
+}
+
+@media screen and (min-width:769px) {
+  .inline-form {
+    position: absolute;
+    bottom: 0px;
+    left: 43%;
+  }
+}
+
+@media (min-width: 847px) {
+  .inline-form {
+    position: absolute;
+    bottom: 0px;
+    left: 40%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .inline-form {
+    position: absolute;
+    bottom: 0px;
+    left: 35%;
+  }
+}
