--- a/app/views/share-result-lateral-flow/v23/account-details-from-nhs-account-v2.html
+++ b/app/views/share-result-lateral-flow/v23/account-details-from-nhs-account-v2.html
@@ -1,5 +1,5 @@
 {% set version = "v23" %}
-{% set pageTitle = "Do you want to use these details from your NHS account?" %}
+{% set pageTitle = "Your details" %}
 
 {% extends "includes/layout-LFD.html" %}
 
@@ -25,10 +25,14 @@
         {% endif %}
       </h1>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">These details are stored as part of your NHS Medical record. If you're happy for us to use these, we will pre-fill them for you and you can save time when reporting your result.</p>
+      <p class="govuk-body govuk-!-margin-bottom-6">These details are used in your NHS login. They can be used whenever you report a result to save you time.</p>
+
+<p class="govuk-body govuk-!-margin-bottom-1">NHS number: 785 677 5576</p><p class="govuk-body govuk-!-margin-bottom-6">Date of birth: 5 January 1978</p>
 
 
     <!--  <p class="govuk-body">Photo successfully uploaded</p> -->
+
+    <div style="position: relative;">
 
     <form action="/share-result-lateral-flow/{{version}}/country" method="post" novalidate>
       <dl class="govuk-summary-list govuk-!-margin-bottom-7">
@@ -105,23 +109,6 @@
           </dd>
           <dd class="govuk-summary-list__actions">
             
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key column-width-title">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" disabled checked id="date-of-birth-checkbox" name="date-of-birth-checkbox" type="checkbox" value="date-of-birth">
-                <label class="govuk-label govuk-checkboxes__label" for="date-of-birth-checkbox">
-                  <strong>Date of birth</strong>
-                </label>
-              </div>
-            </div>
-          <dd class="govuk-summary-list__value">
-            {{ data['date-of-birth-day'] or '12 June 1987' }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
           </dd>
         </div>
 
@@ -232,29 +219,10 @@
           </dd>
         </div>
 
-        
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key column-width-title">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" disabled checked id="nhs-number-checkbox" name="nhs-number-checkbox" type="checkbox" value="nhs-number">
-                <label class="govuk-label govuk-checkboxes__label" for="nhs-number-checkbox">
-                  <strong>NHS number</strong>
-                </label>
-              </div>
-            </div>
-          <dd class="govuk-summary-list__value">
-            {{ data['nhs-number'] or '123 456 789' }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-          </dd>
-        </div>
-
-
       </dl>
 
       <p class="govuk-body">
-        We will only use this information within Test and Trace to help you register and report your Covid-19 Test results.
+        We will only use this information within NHS Test and Trace to help you report your COVID-19 test results.
       </p>
 
       <input style="display:none" id="use-details" name="use-details" type="text" value="Yes">
@@ -265,12 +233,14 @@
 
   </form>
 
-  <form action="/share-result-lateral-flow/{{version}}/country" method="post" novalidate>
+  <form action="/share-result-lateral-flow/{{version}}/country" method="post" novalidate class="inline-form">
     <input style="display:none" id="use-details" name="use-details" type="text" value="No">
     <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
       I'll enter them myself
     </button>
   </form>
+
+</div>
 
     <div class="proto-action big">
       <a href="/share-result-lateral-flow/{{version}}/account-details-from-nhs-account">
