--- a/app/views/share-result-lateral-flow/v23/check-answers.html
+++ b/app/views/share-result-lateral-flow/v23/check-answers.html
@@ -85,6 +85,7 @@
           </dd>
         </div>
 
+        {% if data['about-work'] == "It’s for the NHS in England or Northern Ireland" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             NHS setting
@@ -114,13 +115,14 @@
             </a>
           </dd>
         </div>
+        {% endif %}
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Country
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['country'] }}
+            {{ data['country'] or 'England' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/country">
@@ -182,7 +184,7 @@
             Name
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['first-name'] }} {{ data['last-name'] }}
+            {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/name">
@@ -196,7 +198,7 @@
             Date of birth
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['date-of-birth-day'] }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }}
+            {{ data['date-of-birth-day'] or '5 January 1978' }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/date-of-birth">
@@ -210,7 +212,7 @@
             Medical record (male, female, other...)
           </dt>
           <dd class="govuk-summary-list__value">
-            Female
+            {{ data['gender-1'] or 'Male'}}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/gender">
@@ -224,7 +226,7 @@
             Ethnic group
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['ethnic-group'] }}
+            {{ data['ethnic-group'] or 'Prefer not to say' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/ethnic-group">
@@ -233,22 +235,20 @@
             </a>
           </dd>
         </div>
-        {% if data['ethnic-group'] !== "Prefer not to say" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Ethnic background
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['ethnic-background'] }}
+            {{ data['ethnic-background'] or 'Prefer not to say' }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="/share-result-lateral-flow/{{version}}/ethnic-background">
+            <a href="/share-result-lateral-flow/{{version}}/ethnic-group">
               Change
               <span class="govuk-visually-hidden">ethnic background</span>
             </a>
           </dd>
         </div>
-        {% endif %}
 
         <!-- {% if data['do-you-have-symptoms'] == "Yes" %}
         <div class="govuk-summary-list__row">
@@ -301,12 +301,13 @@
             </a>
           </dd>
         </div>
+        {% if data['nhs-number-known'] !== "No" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             NHS number
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['nhs-number'] }}
+            {{ data['nhs-number'] or '785 677 5576' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/nhs-number">
@@ -315,6 +316,7 @@
             </a>
           </dd>
         </div>
+        {% endif %}
 
         {% if data['email'] == "Yes" %}
         <div class="govuk-summary-list__row">
@@ -322,7 +324,7 @@
             Email
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['email-address'] }}
+            {{ data['email-address'] or 'psmith@example.com' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/got-email">
@@ -357,7 +359,7 @@
             Mobile
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['mobile-phone-number'] }}
+            {{ data['mobile-phone-number'] or '+44684356332' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/mobile">
