--- a/app/views/share-result-lateral-flow/v23/dob.html
+++ b/app/views/share-result-lateral-flow/v23/dob.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/share-result-lateral-flow/{{version}}/dob" method="post">
+      <form action="/share-result-lateral-flow/{{version}}/action/dob" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
