--- a/app/views/share-result-lateral-flow/v23/employer-uon-check.html
+++ b/app/views/share-result-lateral-flow/v23/employer-uon-check.html
@@ -1,4 +1,4 @@
-{% set version = "v17-1" %}
+{% set version = "v23" %}
 {% set pageTitle = "These are the details for the unique organisation number" %}
 
 {% extends "includes/layout-LFD.html" %}
