--- a/app/views/share-result-lateral-flow/v23/got-email.html
+++ b/app/views/share-result-lateral-flow/v23/got-email.html
@@ -6,7 +6,7 @@
 {% block beforeContent %}
 <!-- div for include from content folder -->
   <div id="includedContent1"></div>
-<a class="govuk-back-link" href="/share-result-lateral-flow/{{version}}/address">Back</a>
+<a class="govuk-back-link" href="/share-result-lateral-flow/{{version}}/postcode-lookup-2">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/share-result-lateral-flow/{{version}}/action/email" method="post">
+      <form class="form" action="/share-result-lateral-flow/{{version}}/action/got-email" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="email-address-hint">
