--- a/app/views/share-result-lateral-flow/v23/got-mobile.html
+++ b/app/views/share-result-lateral-flow/v23/got-mobile.html
@@ -6,7 +6,7 @@
 {% block beforeContent %}
 <!-- div for include from content folder -->
   <div id="includedContent1"></div>
-  <a class="govuk-back-link" href="/share-result-lateral-flow/{{version}}/got-email">Back</a>
+  <a class="govuk-back-link" href="javascript:history.go(-1)">Back</a>
 {% endblock %}
 
 {% block content %}
