--- a/app/views/share-result-lateral-flow/v23/postcode-lookup.html
+++ b/app/views/share-result-lateral-flow/v23/postcode-lookup.html
@@ -7,7 +7,7 @@
 <!-- div for include from content folder -->
 <div id="includedContent1"></div>
 
-  <a class="govuk-back-link" href="/share-result-lateral-flow/{{version}}/occupation">Back</a>
+<a class="govuk-back-link" href="javascript:history.go(-1)">Back</a>
 {% endblock %}
 
 {% block content %}
