--- a/app/views/share-result-lateral-flow/v23/name.html
+++ b/app/views/share-result-lateral-flow/v23/name.html
@@ -26,7 +26,7 @@
         {% endif %}
       </h1>
 
-      <form action="/share-result-lateral-flow/{{version}}/dob" method="post">
+      <form action="/share-result-lateral-flow/{{version}}/action/name" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="name-hint">
 
