--- a/app/views/share-result-lateral-flow/v23/check-answers.html
+++ b/app/views/share-result-lateral-flow/v23/check-answers.html
@@ -75,10 +75,14 @@
             Who test was for
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['home-org-use'] }}
+            {% if data['whos-taking-the-test'] == "someone-else" %}
+            Someone else
+            {% else %}
+            Myself
+            {% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="/share-result-lateral-flow/{{version}}/home-org-use">
+            <a href="/share-result-lateral-flow/{{version}}/whos-taking-the-test">
               Change
               <span class="govuk-visually-hidden">who test was for</span>
             </a>
@@ -122,7 +126,7 @@
             Country
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['country'] or 'England' }}
+            {{ data['residence-country'] or 'England' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/share-result-lateral-flow/{{version}}/country">
@@ -369,6 +373,7 @@
           </dd>
         </div>
 
+        {% if data['whos-taking-the-test'] == "someone-else" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Save details to account?
@@ -383,6 +388,7 @@
             </a>
           </dd>
         </div>
+        {% endif %}
 
       </dl>
 
