--- a/app/views/share-result-lateral-flow/v23/country.html
+++ b/app/views/share-result-lateral-flow/v23/country.html
@@ -34,26 +34,26 @@
 
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="country-1" name="country" type="radio" value="England" {{ checked("country", "England") }}>
-                <label class="govuk-label govuk-radios__label" for="country-1">
+                <input class="govuk-radios__input" id="residence-country-1" name="residence-country" type="radio" value="England" {{ checked("residence-country", "England") }}>
+                <label class="govuk-label govuk-radios__label" for="residence-country-1">
                   England
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="country-4" name="country" type="radio" value="Scotland" {{ checked("country", "Scotland") }}>
-                <label class="govuk-label govuk-radios__label" for="country-4">
+                <input class="govuk-radios__input" id="residence-country-4" name="residence-country" type="radio" value="Scotland" {{ checked("residence-country", "Scotland") }}>
+                <label class="govuk-label govuk-radios__label" for="residence-country-4">
                   Scotland
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="country-3" name="country" type="radio" value="Northern Ireland" {{ checked("country", "Northern Ireland") }}>
-                <label class="govuk-label govuk-radios__label" for="country-3">
+                <input class="govuk-radios__input" id="residence-country-3" name="residence-country" type="radio" value="Northern Ireland" {{ checked("residence-country", "Northern Ireland") }}>
+                <label class="govuk-label govuk-radios__label" for="residence-country-3">
                   Northern Ireland
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="country-2" name="country" type="radio" value="Wales" {{ checked("country", "Wales") }}>
-                <label class="govuk-label govuk-radios__label" for="country-2">
+                <input class="govuk-radios__input" id="residence-country-2" name="residence-country" type="radio" value="Wales" {{ checked("residence-country", "Wales") }}>
+                <label class="govuk-label govuk-radios__label" for="residence-country-2">
                   Wales
                 </label>
               </div>
